<resources>
    <string name="app_name">P1111_PreferenceFragment</string>
    <string name="checkbox1_title">CheckBox 1</string>
    <string name="checkbox1_summary">Summary of CheckBox 1</string>
    <string name="edittext1_tittle">EditText 1</string>
    <string name="edittext1_summary">Summary of EditText 1</string>
    <string name="list1_title">List 1</string>
    <string name="list1_summary">Summary of List 1</string>

    <string-array name="entries">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="checkbox2_title">CheckBox 2</string>
    <string name="checkbox2_summary">Summary of CheckBox 2</string>
    <string name="edittext2_tittle">EditText 2</string>
    <string name="edittext2_summary">Summary of EditText 2</string>
    <string name="list2_title">List 2</string>
    <string name="list2_summary">Summary of List 2</string>

    <string name="category1">Category 1</string>
    <string name="category2">Category 2</string>
    <string name="screen1_title">Screen 1</string>
    <string name="screen1_summary">Summary of Screen 1</string>
    <string name="screen2_title">Screen 2</string>
    <string name="screen2_summary">Summary of Screen 2</string>

    <string name="header1_title">Header 1</string>
    <string name="header1_summary">Summary of Header 1</string>
    <string name="header2_title">Header 2</string>
    <string name="header2_summary">Summary of Header 2</string>
    <string name="header3_title">Header 3</string>
    <string name="header3_summary">Summary of Header 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
