<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category1">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="chb2"
            android:summary="@string/checkbox2_summary"
            android:title="@string/checkbox2_title" />
        <EditTextPreference
            android:key="address2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/edittext2_summary"
            android:title="@string/edittext2_tittle" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/entries"
            android:entryValues="@array/entry_values"
            android:key="list2"
            android:summary="@string/list2_summary"
            android:title="@string/list2_title" />
    </PreferenceCategory>
        <PreferenceCategory
            android:title="@string/category2">
            <PreferenceScreen
                android:fragment="ru.bitreslab.p1111_preferencefragment.Fragment1"
                android:summary="@string/screen1_summary"
                android:title="@string/screen1_title">
            </PreferenceScreen>
            <PreferenceScreen
                android:summary="@string/screen2_summary"
                android:title="@string/screen2_title">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="http://www.yandex.ru">
                </intent>
            </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>