<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="chb1"
        android:summary="@string/checkbox1_summary"
        android:title="@string/checkbox1_title" />
    <EditTextPreference
        android:key="address1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/edittext1_summary"
        android:title="@string/edittext1_tittle" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/entries"
        android:entryValues="@array/entry_values"
        android:key="list1"
        android:summary="@string/list1_summary"
        android:title="@string/list1_title" />
</PreferenceScreen>