<?xml version="1.0" encoding="utf-8"?>
<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="ru.bitreslab.p1111_preferencefragment.Fragment1"
        android:icon="@mipmap/ic_launcher"
        android:summary="@string/header1_summary"
        android:title="@string/header1_title">
    </header>
    <header
        android:fragment="ru.bitreslab.p1111_preferencefragment.Fragment2"
        android:icon="@mipmap/ic_launcher"
        android:summary="@string/header2_summary"
        android:title="@string/header2_title">
    </header>
    <header
        android:icon="@mipmap/ic_launcher"
        android:summary="@string/header3_summary"
        android:title="@string/header3_title">
        <intent
            android:action="android.settings.DISPLAY_SETTINGS">
        </intent>
    </header>
</preference-headers>